# AI-Lab

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
Datenbank/: create_tables.sql
service/: db.py  main.py  service.sh
static/: app.js  index.html  style.css
templates/: index.html
tests/: conftest.py  test_buyer_delete.py
